# AlgorithmsEveryDay

./: Makefile  README.md  config.py  database.db  db.py  main.py  pyproject.toml  requirements.txt
