[tool.poetry]
name = "AlgorithmsEveryDay"
version = "0.1.0"
description = ""
authors = ["MaxSpeedCuber <milosandfi@gmail.com>"]
readme = "README.md"
packages = [{include = ""}]

[tool.poetry.dependencies]
python = "^3.11.0"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
